--- a/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
+++ b/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
@@ -56,7 +56,7 @@
 
 
 {
-  \usebackgroundtemplate{\includegraphics[width=1.2\paperwidth]{/home/melanie/Work/pictures/teaching/MSB_Titelseite.pdf}} 
+  \usebackgroundtemplate{\includegraphics[width=1.2\paperwidth]{MSB_Titelseite.pdf}} 
 \begin{frame}
 
  \maketitle 
@@ -74,7 +74,7 @@ $\,$\\[6cm]
 \begin{frame}
 
 \begin{center}
-\includegraphics[width=\textwidth]{/home/melanie/Work/pictures/physiology/supreme_court_abtreibung.png}
+\includegraphics[width=\textwidth]{supreme_court_abtreibung.png}
 \end{center}
 
 \end{frame} 
@@ -90,7 +90,7 @@ $\,$\\[6cm]
 
 \begin{columns}[c]
 \begin{column}{5cm}
-\includegraphics[width=\textwidth]{/home/melanie/Work/pictures/physiology/schwangerer_bauch.jpg}
+\includegraphics[width=\textwidth]{schwangerer_bauch.jpg}
 
 \end{column}
 
@@ -122,23 +122,30 @@ Geburt und Stillen
 \begin{block}{Grundlagen:}
 \begin{itemize}
 \item
+Hormonelle Veränderungen im Verlauf der Schwangerschaft beschreiben und erklären
+\item
+die Entwicklung des Embryos und Foetus erklären 
+\item
+Körperfunktionen und Stoffaustausch des Fötus beschreiben
+\item
+die "Fetoplazentare Einheit" und Funktion der Plazenta erläutern
+\item
+den Geburtsvorgang beschreiben und erklären
+\item
+die hormonelle Steuerung der Laktation erklären
+
 \end{itemize}
 
 \end{block}
 
 
-\end{frame}
-
-
-
-\begin{frame}
-
-\frametitle{Nach dieser Vorlesung sollten Sie folgendes können}
-
 
 \begin{block}{Klinik:}
 \begin{itemize}
 \item
+Erklären, wie ein Schwangerschaftstest funktioniert
+\item
+Häufige Beschwerden und Komplikationen in der Schwangerschaft erklären
 
 \end{itemize}
 
@@ -165,27 +172,27 @@ Geburt und Stillen
 \frametitle{Während der ersten Zellteilungen wandert der Embryo in den Uterus}
 
 \begin{center}
-\includegraphics<1>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day0A.png}
+\includegraphics<1>[width=0.8\textwidth]{Human_Fertilization_Day0A.png}
 
-\includegraphics<2>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day0B.png}
+\includegraphics<2>[width=0.8\textwidth]{Human_Fertilization_Day0B.png}
 
-\includegraphics<3>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day0C.png}
+\includegraphics<3>[width=0.8\textwidth]{Human_Fertilization_Day0C.png}
 
-\includegraphics<4>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day1.png}
+\includegraphics<4>[width=0.8\textwidth]{Human_Fertilization_Day1.png}
 
-\includegraphics<5>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day2.png}
+\includegraphics<5>[width=0.8\textwidth]{Human_Fertilization_Day2.png}
 
-\includegraphics<6>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day3A.png}
+\includegraphics<6>[width=0.8\textwidth]{Human_Fertilization_Day3A.png}
 
-\includegraphics<7>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day3B.png}
+\includegraphics<7>[width=0.8\textwidth]{Human_Fertilization_Day3B.png}
 
-\includegraphics<8>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day4.png}
+\includegraphics<8>[width=0.8\textwidth]{Human_Fertilization_Day4.png}
 
-\includegraphics<9>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day5.png}
+\includegraphics<9>[width=0.8\textwidth]{Human_Fertilization_Day5.png}
 
-\includegraphics<10>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization_Day6.png}
+\includegraphics<10>[width=0.8\textwidth]{Human_Fertilization_Day6.png}
 
-\includegraphics<11>[width=0.8\textwidth]{/home/melanie/Work/pictures/physiology/Human_Fertilization.png}
+\includegraphics<11>[width=0.8\textwidth]{Human_Fertilization.png}
 
 \end{center}
 
@@ -215,7 +222,7 @@ Wenn erkannt, muss die Schwangerschaft beendet werden
 \begin{column}{5cm}
 
 \begin{center}
-\includegraphics[width=\textwidth]{/home/melanie/Work/pictures/physiology/Eileiterruptur.png}
+\includegraphics[width=\textwidth]{Eileiterruptur.png}
 \end{center}
 
 
@@ -272,14 +279,13 @@ Austreibungs- und Presswehen bringen das Kind durch den Geburtskanal
 \frametitle{Hormonelle Regelkreise ermöglichen die Geburt. }
 
 \begin{center}
-\includegraphics[width=\textwidth]{/home/melanie/Work/pictures/physiology/geburt_hormone}
+\includegraphics[width=\textwidth]{geburt_hormone}
 \end{center}
 
 
 \end{frame}
 
 \section{Laktation}
-
 
 %% Hormonelle Steuerung der Laktation
 
@@ -308,7 +314,7 @@ Austreibungs- und Presswehen bringen das Kind durch den Geburtskanal
 
 \begin{column}{6cm}
 \begin{center}
- \includegraphics[width=\textwidth]{/home/melanie/Work/pictures/metaphore/smilie_balloons.jpg}
+ \includegraphics[width=\textwidth]{smilie_balloons.jpg}
 \end{center}
 
 \end{column}
