Learning objectives and review, spell check, continue work on Geburt

--- a/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
+++ b/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
@@ -124,7 +124,7 @@ Geburt und Stillen
 \item
 Hormonelle Veränderungen im Verlauf der Schwangerschaft beschreiben und erklären
 \item
-die Entwicklung des Embryos und Foetus erklären 
+die Entwicklung des Embryos und Fötus erklären 
 \item
 Körperfunktionen und Stoffaustausch des Fötus beschreiben
 \item
@@ -145,7 +145,7 @@ die hormonelle Steuerung der Laktation erklären
 \item
 Erklären, wie ein Schwangerschaftstest funktioniert
 \item
-Häufige Beschwerden und Komplikationen in der Schwangerschaft erklären
+häufige Beschwerden und Komplikationen in der Schwangerschaft erklären
 
 \end{itemize}
 
@@ -212,7 +212,7 @@ Häufige Beschwerden und Komplikationen in der Schwangerschaft erklären
 \item
 Embryo gelangt nicht in den Uterus, sondern nistet sich im Eileiter ein
 \item
-Wenn nicht erkannt,  kommt es  einem spontanen Abbruch oder einer (gefärhlichen) Eileiter-Ruptur
+Wenn nicht erkannt,  kommt es  einem spontanen Abbruch oder einer (gefährlichen) Eileiter-Ruptur
 \item
 Wenn erkannt, muss die Schwangerschaft beendet werden
 \end{itemize}
@@ -242,12 +242,13 @@ Wenn erkannt, muss die Schwangerschaft beendet werden
 \begin{block}{Einleitung}
 \begin{itemize}
 \item
-Nach ca.  40 Schwangerschaftswochen
+nach ca.  40 Schwangerschaftswochen
 \item
-Oxytozin- und Prostaglandine bewirken ein Einsetzen der Wehen
+Oxytozin und Prostaglandine bewirken ein Einsetzen der Wehen
 \end{itemize}
 \end{block}
 
+\pause
 
 \begin{block}{Eröffnungsphase}
 \begin{itemize}
@@ -260,6 +261,7 @@ Muttermund öffnet sich, Fruchtblase platzt
 \end{itemize}
 \end{block}
 
+\pause
 
 \begin{block}{Austreibungsphase}
 \begin{itemize}
@@ -285,6 +287,17 @@ Austreibungs- und Presswehen bringen das Kind durch den Geburtskanal
 
 \end{frame}
 
+%% \begin{frame}
+%% \frametitle{Hormonelle Regelkreise ermöglichen die Geburt. }
+
+%% \begin{block}{Vorbereitung}
+%% Hohes Östrogen am Ende der Schwangerschaft 
+
+%% \end{block}
+
+
+%% \end{frame}
+
 \section{Laktation}
 
 %% Hormonelle Steuerung der Laktation
@@ -299,9 +312,45 @@ Austreibungs- und Presswehen bringen das Kind durch den Geburtskanal
 
 \begin{frame}
 
-\frametitle{Jetzt* sollten Sie folgendes können}
+ \frametitle{Jetzt* sollten Sie folgendes können}
+
+
+
+\begin{block}{Grundlagen:}
+\begin{itemize}
+\item
+Hormonelle Veränderungen im Verlauf der Schwangerschaft beschreiben und erklären
+\item
+die Entwicklung des Embryos und Fötus erklären 
+\item
+Körperfunktionen und Stoffaustausch des Fötus beschreiben
+\item
+die "Fetoplazentare Einheit" und Funktion der Plazenta erläutern
+\item
+den Geburtsvorgang beschreiben und erklären
+\item
+die hormonelle Steuerung der Laktation erklären
+
+\end{itemize}
+
+\end{block}
+
+
+
+\begin{block}{Klinik:}
+\begin{itemize}
+\item
+Erklären, wie ein Schwangerschaftstest funktioniert
+\item
+häufige Beschwerden und Komplikationen in der Schwangerschaft erklären
+
+\end{itemize}
+
+\end{block}
 
 \end{frame}
+
+
 
 
 
@@ -348,7 +397,7 @@ Bauch einer schwangeren Frau. Photo by \href{https://unsplash.com/es/@anastasiia
 
 
 \item
-Befruchtung bis Einnistung im Menschen. Von Ttrue12, CC-BY-SA 3.0, 2012, Wikimedia Commons.
+Befruchtung bis Einnistung im Menschen. Von Ttrue12, CC-BY-SA 3.0, 2012, Wikimedia Commons. 
 
 \item
 Eileiter-Ruptur. Von Ectopic\_pregnancy.svg: Hic et nuncderivative work: Hic et nunc (talk) - Ectopic\_pregnancy.svg, CC BY-SA 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=17236669}
@@ -385,3 +434,7 @@ Supreme Court will Recht auf Schwangerschaftsabbrüche abschaffen. Screenshot vo
 
 %% \end{column}
 %% \end{columns}
+
+
+%% Umlaute
+%% Ä ä Ö ö Ü ü
