Change structure a bit, add some text to Embryonalentwicklung

--- a/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
+++ b/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
@@ -157,17 +157,14 @@ häufige Beschwerden und Komplikationen in der Schwangerschaft erklären
 %% %% %% Main Body
 
 
-\section{Schwangerschaft}
-
-%% Befruchtung und nidation
 
 
+ 
+
+\section{Keimstadium, Nidation}
 
 
-\section{Entwicklung des Embryos und Fötus}
-
-
-%% Embryonalentwicklung bis zur Einnistung
+%% Keimstadium bis zur Einnistung
 \begin{frame}
 \frametitle{Während der ersten Zellteilungen wandert der Embryo in den Uterus}
 
@@ -232,7 +229,49 @@ Wenn erkannt, muss die Schwangerschaft beendet werden
 
 \end{frame}
 
+\section{Embryonalstadium}
 
+%% Blastozyste Embryoblast Trophoblast
+
+\begin{frame}
+\frametitle{Teile der Blastozyste haben unterschiedliche Funktionen}
+
+\begin{columns}[c]
+
+\begin{column}{5cm}
+\begin{center}
+    \includegraphics[width=\textwidth]{Blastozyste.png}
+\end{center}
+\end{column}
+
+\begin{column}{5cm}
+
+Aus dem Embryoblast entwickelt sich der Embryo. \\[0.2 cm]
+
+Aus dem Trophoblast entwickelt sich Syncytiotrophoblast und Zytotrophoblast (später: Plazenta)
+
+\end{column}
+
+\end{columns}
+
+\end{frame}
+
+
+%% Gastrulation
+%% Keimblaetter
+%%\begin{frame}{Durch die Gastrulation bilden sich die Keimblätter }
+    
+%% \end{frame}
+
+
+%% Primitivstreifen
+
+%% Veraenderungen in der Schwangeren
+
+
+%% Ende der Embryonalphase
+
+\section{Fetalstadium}
 
 \section{Geburt}
 
@@ -398,6 +437,9 @@ Bauch einer schwangeren Frau. Photo by \href{https://unsplash.com/es/@anastasiia
 
 \item
 Befruchtung bis Einnistung im Menschen. Von Ttrue12, CC-BY-SA 3.0, 2012, Wikimedia Commons. 
+
+\item
+Blastozyste. Die Autorenschaft wurde nicht in einer maschinell lesbaren Form angegeben. Es wird Lennert B als Autor angenommen (basierend auf den Rechteinhaber-Angaben). - Die Autorenschaft wurde nicht in einer maschinell lesbaren Form angegeben. Es wird angenommen, dass es sich um ein eigenes Werk handelt (basierend auf den Rechteinhaber-Angaben)., Gemeinfrei, https://commons.wikimedia.org/w/index.php?curid=609008
 
 \item
 Eileiter-Ruptur. Von Ectopic\_pregnancy.svg: Hic et nuncderivative work: Hic et nunc (talk) - Ectopic\_pregnancy.svg, CC BY-SA 3.0, \url{https://commons.wikimedia.org/w/index.php?curid=17236669}
