Work more on embrzonalphase

--- a/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
+++ b/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
@@ -231,6 +231,53 @@ Wenn erkannt, muss die Schwangerschaft beendet werden
 
 \section{Embryonalstadium}
 
+\begin{frame}
+\frametitle{Der  eingenistete Embryo produziert hCG}
+
+\begin{itemize}
+    \item 
+    humanes Choriongonadotropin (hCG)
+    \item 
+    sehr ähnlich wie LH
+    \item
+    Stimuliert die Progesteronbildung im Corpus luteum gravitas
+    \item
+    Aufrechterhaltung der Schwangerschaft
+    
+\end{itemize}
+
+
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Bei Schwangerschaftstests wird auf hCG getestet}
+
+\begin{columns}[c]
+
+
+
+\begin{column}{5cm}
+\includegraphics[width=\textwidth]{Schwangerschaftstest_Schema.png}
+\end{column}
+
+
+\begin{column}{5cm}
+
+Nachweisbar im Urin: Ab 12-14 Tage nach Befruchtung
+
+\pause
+
+
+
+\end{column}
+
+\end{columns}
+
+\end{frame}
+
+
+
 %% Blastozyste Embryoblast Trophoblast
 
 \begin{frame}
@@ -340,6 +387,8 @@ Austreibungs- und Presswehen bringen das Kind durch den Geburtskanal
 \section{Laktation}
 
 %% Hormonelle Steuerung der Laktation
+
+
 
 %% nicht Stillen ist auch ok - WHO Recommendations, Reality
 
@@ -451,6 +500,12 @@ Hormonelle Regelkreise während der Geburt. Aus: Friederike Werny, Stefan Schlat
 %% %% all lectures
 \item
 Luftballons mit frohen und traurigen Smilies. Photo by \href{https://unsplash.com/@artbyhybrid?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Hybrid} on \href{https://unsplash.com/s/photos/feedback?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText}{Unsplash}
+
+\item
+Schwangerschaftstest: Prinzip. Von Martin Brändli geändert von Klaus Hoffmeier - Eigenes Werk, CC BY-SA 2.5, \url{https://commons.wikimedia.org/w/index.php?curid=560150}
+
+
+
 
 \item
 Supreme Court will Recht auf Schwangerschaftsabbrüche abschaffen. Screenshot von Zeit Online, vom 3. Mai 2022.
