--- a/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
+++ b/M11.10.3_Sexualentwicklung_und_Reproduktionsphysiologie_II.tex
@@ -373,16 +373,45 @@ Austreibungs- und Presswehen bringen das Kind durch den Geburtskanal
 
 \end{frame}
 
-%% \begin{frame}
-%% \frametitle{Hormonelle Regelkreise ermöglichen die Geburt. }
+\begin{frame}
+\frametitle{Hormonelle Regelkreise ermöglichen die Geburt. }
 
-%% \begin{block}{Vorbereitung}
-%% Hohes Östrogen am Ende der Schwangerschaft 
+\begin{block}{Vorbereitung}
+Hohes Östrogen am Ende der Schwangerschaft  führt zu vermehrter Bildung von Oxytozin-Rezeptoren, vermehrter Produktion von  
+kontraktilen Proteinen und gap junctions. 
+\end{block}
 
-%% \end{block}
+\pause
+\begin{block}{Ferguson Reflex}
+Ferguson Reflex: Dehnung der Zervix (durch Kopf des Kindes) bewirkt Ausschüttung von Oxytozin. Positive Rückkopplung zwischen Oxytozin und Wehen. Produktion von Relaxinen hilft, die Zervix zu dilatieren. 
+\end{block}
 
+\pause
 
-%% \end{frame}
+\begin{block}{Hormonproduktion im Fötus}
+
+Fötus produziert ACTH und Cortisol. Cortisol fördert Bildung von Östrogen und hemmt Progesteron. Produktion von  DHEA in beiden Nebennierenrinden (elterlich und im Fötus!) fördert Kontraktion des Uterus. 
+
+ 
+
+\pause
+
+\textcolor{theme}{Was passiert bei fötalem Stress während der Schwangerschaft? }
+
+\end{block}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Fötaler Stress }
+
+Wenn der Fötus Cortisol produziert, kann es zu einer Frühgeburt kommen. 
+
+\begin{center}
+\includegraphics[width=\textwidth]{geburt_hormone}
+\end{center}
+
+\end{frame}
 
 \section{Laktation}
 
